--- a/app/styles/utils/_grids.scss
+++ b/app/styles/utils/_grids.scss
@@ -15,7 +15,7 @@
 // block mixin
 // change settings for a block of content
 // (maybe we should add this to the Susy core?)
-// https://gist.github.com/mirisuzanne/9b5ca9df6642173e20058853031b8d88
+// 	
 @mixin susy-settings-block($config) {
   // store the old settings
   $global: $susy;
@@ -27,62 +27,122 @@
   
   // return to the initial settings
   $susy: $global !global;
+}	
+
+@function check-xs($width) {
+  @return if($width = 576, $width, null);
 }
 
 // Mobile first grid, huh?
 // I think so
-@for $i from 1 through map-get($susy, 'columns') {
-  .col-#{$i} {
-    width: span($i);
-  }
-  .push-#{$i}{
-  	#{$grid-alignment}: span($i);
-  }
-  .pull-#{$i}{
-  	#{$grid-alignment-rev}: span($i);
-  }
-  .offset-#{$i}{
-  	margin-#{$grid-alignment}: span($i);
-  }
+
+@for $i from 1 through map-deep-get($susy-settings, 's', 'columns') {
+  	.col-#{$i} {
+  		@if $grid-type == 'flexbox'{
+			flex: 0 0 span($i);
+			max-width: span($i);
+		} @else {
+			width: span($i);
+		}
+  	}
+  	.push-#{$i}{
+  		#{$grid-alignment}: span($i);
+  	}
+  	.pull-#{$i}{
+  		#{$grid-alignment-rev}: span($i);
+  	}
+  	.offset-#{$i}{
+  		margin-#{$grid-alignment}: span($i);
+  	}
 }
 
-@include respond-to (m){
-	@include susy-settings-block($susy-medium) {
-		@for $i from 1 through map-get($susy-medium, 'columns') {
-	  	.col-m-#{$i} {
-	    	width: span($i);
-	  	}
-	  	.push-m-#{$i}{
-		  	#{$grid-alignment}: span($i);
-		  }
-		  .pull-m-#{$i}{
-		  	#{$grid-alignment-rev}: span($i);
-		  }
-		  .offset-m-#{$i}{
-		  	margin-#{$grid-alignment}: span($i);
-		  }
+@each $breakpoint, $width in $breakpoints{
+	$min: check-xs($width);
+	@if $min{
+		@include respond-to($breakpoint){
+			@each $size, $setting in $susy-settings{
+				@include susy-settings-block($setting) {
+					@for $i from 1 through map-get($susy, 'columns') {
+						.col-#{$breakpoint}-#{$i} {
+					  		@if $grid-type == 'flexbox'{
+								flex: 0 0 span($i);
+								max-width: span($i);
+							} @else {
+								width: span($i);
+							}
+					  	}
+					  	.push-#{$breakpoint}-#{$i}{
+					  		#{$grid-alignment}: span($i);
+						}
+						.pull-#{$breakpoint}-#{$i}{
+						  	#{$grid-alignment-rev}: span($i);
+						}
+						.offset-#{$breakpoint}-#{$i}{
+						  	margin-#{$grid-alignment}: span($i);
+						}
+					  }
+				}
+			}
 		}
+	} 
+}
+
+@if $grid-type == 'flexbox'{
+	// JUSTIFY CONTENT
+	// APPLY on .row
+	.justify-content-start{
+		justify-content: flex-start;
+	}
+	.justify-content-end{
+		justify-content: flex-end;
+	}
+	.justify-content-center{
+		justify-content: center;
+	}
+	.justify-content-between{
+		justify-content: space-between;
+	}
+	.justify-content-around{
+		justify-content: space-around;
+	}
+
+	// ALIGN ITEMS for VERTICAL ALIGN
+	// APPLY on .row
+	.align-items-start{
+		align-items: flex-start;
+	}
+	.align-items-end{
+		align-items: flex-end;
+	}
+	.align-items-center{
+		align-items: center;
+	}
+	.align-items-baseline{
+		align-items: baseline;
+	}
+	.align-items-strech{
+		align-items: stretch;
+	}
+
+	// ALIGN SELF for VERTICAL ALIGN
+	// APPLY on individual element
+	.align-self-start{
+		align-items: flex-start;
+	}
+	.align-self-end{
+		align-items: flex-end;
+	}
+	.align-self-center{
+		align-items: center;
+	}
+	.align-self-baseline{
+		align-items: baseline;
+	}
+	.align-self-strech{
+		align-items: stretch;
 	}
 }
 
-@include respond-to (l){
-	@include susy-settings-block($susy-large) {
-		@for $i from 1 through map-get($susy-large, 'columns') {
-	  	.col-l-#{$i} {
-	    	width: span($i);
-	  	}
-	  	.push-l-#{$i}{
-		  	#{$grid-alignment}: span($i);
-		  }
-		  .pull-l-#{$i}{
-		  	#{$grid-alignment-rev}: span($i);
-		  }
-		  .offset-l-#{$i}{
-		  	margin-#{$grid-alignment}: span($i);
-		  }
-		}
-	}
-}
 
 .container{	
 	@include container();
@@ -90,6 +150,11 @@
 		@extend %clearfix;
 		margin-left: -1 * gutter()/2;
 		margin-right: -1 * gutter()/2;
+		//@warn $grid-type;
+		@if $grid-type == 'flexbox'{
+			display: flex;
+			flex-wrap: wrap;
+		}
 	}
 }
 
