Update grid system to Susy 3!

--- a/app/index.njk
+++ b/app/index.njk
@@ -5,10 +5,10 @@
   <div class="container good-type">
     <h1>Grid</h1>
     <div class="row">
-      <div class="col-l-1 col-4">.col-l-1 .col-4</div>
-      <div class="col-l-11 col-2">.col-l-11 .col-2</div>
-      <div class="col-l-10 col-2">.col-l-10 .col-2</div>
-      <div class="col-l-2 col-4">.col-l-2 .col-4</div>
+      <div class="col-l-1 col-m-3 col-4">.col-l-1 .col-m-3 .col-4</div>
+      <div class="col-l-11 col-m-3 col-2">.col-l-11 .col-2</div>
+      <div class="col-l-10 col-m-3 col-2">.col-l-10 .col-2</div>
+      <div class="col-l-2 col-m-3 col-4">.col-l-2 .col-4</div>
       <div class="col-l-3 col-1">.col-l-3 .col-1</div>
       <div class="col-l-9 col-3">.col-l-9 .col-3</div>
       <div class="col-l-8 col-4">.col-l-8 .col-4</div>
