--- a/app/style-flexbox.njk
+++ b/app/style-flexbox.njk
@@ -28,12 +28,12 @@ TODO:
       <div class="col-l-6 col-2">.col-l-6 .col-2</div>
       <div class="col-l-6 col-2">.col-l-6 .col-2</div>
     
-      <div class="col-l-3 .col-2">.col-l-3 .col-2</div>
-      <div class="col-l-4 .col-2">.col-l-4 .col-2</div>
-      <div class="col-l-5 .col-2">.col-l-5 .col-2</div>
-      <div class="col-l-6 .col-2">.col-l-6 .col-2</div>
-      <div class="col-l-5 .col-4">.col-l-5 .col-4</div>
-      <div class="col-l-1 .col-4">.col-l-1 .col-4</div>
+      <div class="col-l-3 col-2">.col-l-3 .col-2</div>
+      <div class="col-l-4 col-2">.col-l-4 .col-2</div>
+      <div class="col-l-5 col-2">.col-l-5 .col-2</div>
+      <div class="col-l-6 col-2">.col-l-6 .col-2</div>
+      <div class="col-l-5 col-4">.col-l-5 .col-4</div>
+      <div class="col-l-1 col-4">.col-l-1 .col-4</div>
     </div>
     
     <h3>Grid - Nesting</h3>
