--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,7 +3,8 @@
 // endbower
 
 /* Susy Threeish */
-@import "susy3-a6/_susy.scss";
+// @import "susy3-a6/_susy.scss";
+@import 'node_modules/susy/sass/_susy.scss';
 /* end - Susy Threeish */
 
 @import "utils/_var.scss";
