change col- to moo- and fixing some loop

--- a/app/index.njk
+++ b/app/index.njk
@@ -5,47 +5,48 @@
   <div class="container good-type">
     <h1>Grid</h1>
     <div class="row">
-      <div class="col-l-1 col-m-3 col-4">.col-l-1 .col-m-3 .col-4</div>
-      <div class="col-l-11 col-m-3 col-2">.col-l-11 .col-2</div>
-      <div class="col-l-10 col-m-3 col-2">.col-l-10 .col-2</div>
-      <div class="col-l-2 col-m-3 col-4">.col-l-2 .col-4</div>
-      <div class="col-l-3 col-1">.col-l-3 .col-1</div>
-      <div class="col-l-9 col-3">.col-l-9 .col-3</div>
-      <div class="col-l-8 col-4">.col-l-8 .col-4</div>
-      <div class="col-l-4 col-3">.col-l-4 .col-3</div>
-      <div class="col-l-5 col-1">.col-l-5 .col-1</div>
-      <div class="col-l-7 col-4">.col-l-7 .col-4</div>
-      <div class="col-l-6 col-2">.col-l-6 .col-2</div>
-      <div class="col-l-6 col-2">.col-l-6 .col-2</div>
+      <div class="moo-l-12 moo-m-8 moo-4">.moo-l-12</div>
+      <div class="moo-l-1 moo-m-3 moo-4">.moo-l-1 .moo-m-3 .moo-4</div>
+      <div class="moo-l-11 moo-m-3 moo-2">.moo-l-11 .moo-2</div>
+      <div class="moo-l-10 moo-m-3 moo-2">.moo-l-10 .moo-2</div>
+      <div class="moo-l-2 moo-m-3 moo-4">.moo-l-2 .moo-4</div>
+      <div class="moo-l-3 moo-1">.moo-l-3 .moo-1</div>
+      <div class="moo-l-9 moo-3">.moo-l-9 .moo-3</div>
+      <div class="moo-l-8 moo-4">.moo-l-8 .moo-4</div>
+      <div class="moo-l-4 moo-3">.moo-l-4 .moo-3</div>
+      <div class="moo-l-7 moo-1">.moo-l-7 .moo-1</div>
+      <div class="moo-l-5 moo-4">.moo-l-5 .moo-4</div>
+      <div class="moo-l-6 moo-2">.moo-l-6 .moo-2</div>
+      <div class="moo-l-6 moo-2">.moo-l-6 .moo-2</div>
     
-      <div class="col-l-3 col-2">.col-l-3 .col-2</div>
-      <div class="col-l-4 col-2">.col-l-4 .col-2</div>
-      <div class="col-l-5 col-2">.col-l-5 .col-2</div>
-      <div class="col-l-6 col-2">.col-l-6 .col-2</div>
-      <div class="col-l-5 col-4">.col-l-5 .col-4</div>
-      <div class="col-l-1 col-4">.col-l-1 .col-4</div>
+      <div class="moo-l-3 moo-2">.moo-l-3 .moo-2</div>
+      <div class="moo-l-4 moo-2">.moo-l-4 .moo-2</div>
+      <div class="moo-l-5 moo-2">.moo-l-5 .moo-2</div>
+      <div class="moo-l-6 moo-2">.moo-l-6 .moo-2</div>
+      <div class="moo-l-5 moo-4">.moo-l-5 .moo-4</div>
+      <div class="moo-l-1 moo-4">.moo-l-1 .moo-4</div>
     </div>
     
     <h3>Grid - Nesting</h3>
     <div class="row">
-      <div class="col-l-8">
-        .col-l-8
+      <div class="moo-l-8">
+        .moo-l-8
         <div class="row">
-          <div class="col-l-6">.col-l-6</div>
-          <div class="col-l-6">.col-l-6</div>
+          <div class="moo-l-6">.moo-l-6</div>
+          <div class="moo-l-6">.moo-l-6</div>
         </div>
       </div>
-      <div class="col-l-4">.col-l-4</div>
+      <div class="moo-l-4">.moo-l-4</div>
     </div>
     
     <h3>Grid - Utilities</h3>
     <div class="row utilities">
-      <div class="col-l-2 push-l-8">.col-l-2 .push-l-8</div>
-      <div class="col-l-4 pull-l-2">.col-l-4 .pull-l-2</div>
+      <div class="moo-l-2 push-l-8">.moo-l-2 .push-l-8</div>
+      <div class="moo-l-4 pull-l-2">.moo-l-4 .pull-l-2</div>
     </div>
     <div class="row utilities">
-      <div class="col-l-2 offset-l-2">.col-l-2 .offset-l-2</div>
-      <div class="col-l-4 offset-l-1">.col-l-4 .offset-l-1</div>
+      <div class="moo-l-2 offset-l-2">.moo-l-2 .offset-l-2</div>
+      <div class="moo-l-4 offset-l-1">.moo-l-4 .offset-l-1</div>
     </div>
   </div>
 </section>
@@ -54,7 +55,7 @@
   <div class="container good-type">
       <h1>Typography</h1>
     <div class="row">
-      <div class="col-l-12">
+      <div class="moo-l-12">
         <h1>Header level 1</h1>
         
         <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
