--- a/app/styles/utils/_grids.scss
+++ b/app/styles/utils/_grids.scss
@@ -14,28 +14,31 @@
 
 @each $size, $setting in $susy-settings{
 	@include susy-at($setting) {
-	   	@for $i from 1 through map-get($setting, 'total-column') {
-	   		.row{				
-				margin-left: -1 * gutter()/2;
-				margin-right: -1 * gutter()/2;
-				@if $grid-type == 'flexbox'{
-					display: flex;
-					flex-wrap: wrap;
-				}
+		.row{				
+			margin-left: -1 * gutter()/2;
+			margin-right: -1 * gutter()/2;
+			@if $grid-type == 'flexbox'{
+				display: flex;
+				flex-wrap: wrap;
 			}
-	   		@if $size == 's'{
-	   			.col-#{$i} {
+		}
+		[class*="moo-"]{
+			margin-right: gutter()/2;
+			margin-left: gutter()/2;
+			@if $grid-type == 'flexbox'{
+				flex-basis: 100%;
+			}
+		}
+	   	@for $i from 1 through map-get($setting, 'total-column') {
+	   		@if $size == 'xs'{
+	   			.moo-#{$i} {
 			  		@if $grid-type == 'flexbox'{
 						flex: 0 0 span($i);
 						max-width: span($i);
-						margin-right: gutter()/2;
-					  	margin-left: gutter()/2;
 						position: relative;
 					} @else {
 						width: span($i);
 						position: relative;
-						margin-right: gutter()/2;
-					  	margin-left: gutter()/2;
 					  	float: $grid-alignment;
 					}
 			  	}
@@ -49,18 +52,14 @@
 			  		margin-#{$grid-alignment}: span($i);
 			  	}
 			} @else {
-				.col-#{$size}-#{$i} {
+				.moo-#{$size}-#{$i} {
 			  		@if $grid-type == 'flexbox'{
 						flex: 0 0 span($i);
 						max-width: span($i);
-						margin-right: gutter()/2;
-					  	margin-left: gutter()/2;
 						position: relative;
 					} @else {
 						width: span($i);
 						position: relative;
-						margin-right: gutter()/2;
-					  	margin-left: gutter()/2;
 					  	float: $grid-alignment;
 					}
 			  	}
