Responsive typography achieved! Thanks for https://github.com/hiulit/Sassy-Gridlover!

--- a/app/style-flexbox.njk
+++ b/app/style-flexbox.njk
@@ -1,19 +1,10 @@
-{# 
-############################
-TODO: 
-1. Justify content
-2. Align items
-3. Align self
-############################
-#}
-
 {% set flexbox = true %}
 {% extends "layouts/default.njk" %}
 
 {% block content %}
 <section id="grid">
   <div class="container good-type">
-    <h1>Grid</h1>
+    <h1>Grid - FLexbox</h1>
     <div class="row">
       <div class="moo-l-1 moo-s-2 moo-m-8 moo-4">.moo-l-1 .moo-4</div>
       <div class="moo-l-11 moo-2">.moo-l-11 .moo-2</div>
