--- a/app/styles/utils/_grids.scss
+++ b/app/styles/utils/_grids.scss
@@ -137,6 +137,8 @@
 .container{	
 	@include container();
 	.row{
-		@extend %clearfix;
+		@if $grid-type == 'float'{
+			@extend %clearfix;
+		}
 	}
 }
