--- a/app/styles/utils/_type-mod.scss
+++ b/app/styles/utils/_type-mod.scss
@@ -1,11 +1,10 @@
 /* ============================================================================================= 
 * MODULAR TYPOGRAPHY START HERE!!!
 * Just posted this article http://rizqi.nizamilputra.com/guide-to-good-typography/
+* It's using GridLover with help Sassy Grid Lover https://www.npmjs.com/package/sassy-gridlover
 ================================================================================================ */
 
-$ms-base: 20px, 25px;
-$ms-ratio: $golden;
-$ms-maxvar: 8;
+@import 'node_modules/sassy-gridlover/sassy-gridlover/_sassy-gridlover.scss';
 
 /* --------------------------------------------------------
 * Use element-width instead of view port width
@@ -18,31 +17,16 @@ $rwd-typography: (
     element-width: 0
   ),
   m: (
-    base-font-size: 17px,
-    base-line-height: 26.35px,
+    base-font-size: 16px,
+    base-line-height: 24px,
     element-width: 550px
   ),
   l: (
     base-font-size: 20px,
-    base-line-height: 31px,
+    base-line-height: 30px,
     element-width: 768px
   )
 );
-
-
-/// Map deep get
-/// @author Hugo Giraudel
-/// @link https://css-tricks.com/snippets/sass/deep-getset-maps/
-/// @access public
-/// @param {Map} $map - Map
-/// @param {Arglist} $keys - Key chain
-/// @return {*} - Desired value
-@function map-deep-get($map, $keys...) {
-  @each $key in $keys {
-    $map: map-get($map, $key);
-  }
-  @return $map;
-}
 
 
 /// Generate base font-size on root-parent element
@@ -62,23 +46,11 @@ $rwd-typography: (
 }
 
 // Apply to _base.scss to create modular scale class
+//
 // -------------------------------------------------
-@mixin ms-var {
-  @for $i from 0 through $ms-maxvar {
-  	.ms#{$i}{
-  		font-size: em(ms($i), $context: nth($ms-base, 1));
-  		@if $i > 3{
-  			line-height: 1em;
-  		} @else {
-  			line-height: 1.45em;
-  		}
-  		@if $i > 1{
-        margin-top: 1.5em;
-  			margin-bottom: 0.5em;
-  		} @else {
-        margin-top: 1em;
-  			margin-bottom: 1em;
-  		}
-  	}
-  }
-}
+
+$sgl-base-font-size: 14;
+$sgl-root-font-size: 14;
+$sgl-base-line-height: 1.5;
+$sgl-base-unit: em;
+$sgl-scale-factor: $MAJOR_THIRD;
