--- a/app/default.njk
+++ b/app/default.njk
@@ -50,8 +50,8 @@
     <!-- endbuild -->
     
     <!-- build:js scripts/plugins.js -->
-    <script src=/node_modules/eqcss/EQCSS.js></script>
-    <script src=/node_modules/eqcss/EQCSS-polyfills.js></script>
+    <script src="../node_modules/eqcss/EQCSS.js"></script>
+    <script src="../node_modules/eqcss/EQCSS-polyfills.js"></script>
     <!-- endbuild -->
     
     <!-- build:js scripts/main.js -->
