--- a/app/styles/flexbox.scss
+++ b/app/styles/flexbox.scss
@@ -7,19 +7,23 @@
 /* end - Susy Threeish */
 
 
-@import "utils/_var.scss";
-@import "utils/_rem.scss";
-@import "utils/_mixins.scss";
-@import "utils/_animations.scss";
-@import "utils/_helper.scss";
-@import "utils/_type-mod.scss";
+@import "settings/_var.scss";
+
+@import "tools/_rem.scss";
+@import "tools/_mixins.scss";
+@import "tools/_animations.scss";
+@import "tools/_helper.scss";
+@import "tools/_type-mod.scss";
 
 // SET FLEXBOX TRUE
 $grid-type: flexbox;
-@import "utils/_grids.scss";
+@import "tools/_grids.scss";
 
-@import "base/_base.scss";
+@import "base/_global.scss";
+@import "base/_text.scss";
+@import "base/_form.scss";
+@import "base/_table.scss";
 
-@import "layout/_layout-flexbox.scss";
+@import "objects/_layout.scss";
 
 @import "themes/_theme-default.scss";
