update mixins.scss and move type-mod setting to settings folder

--- a/app/styles/flexbox.scss
+++ b/app/styles/flexbox.scss
@@ -8,12 +8,11 @@
 
 
 @import "settings/_var.scss";
+@import "settings/_type-mod.scss";
 
 @import "tools/_rem.scss";
 @import "tools/_mixins.scss";
 @import "tools/_animations.scss";
-@import "tools/_helper.scss";
-@import "tools/_type-mod.scss";
 
 // SET FLEXBOX TRUE
 $grid-type: flexbox;
@@ -27,3 +26,6 @@ $grid-type: flexbox;
 @import "objects/_layout.scss";
 
 @import "themes/_theme-default.scss";
+
+// to avoid !important put helper.scss at bottom of css doc
+@import "tools/_helper.scss";
