--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,12 +7,12 @@
 /* end - Susy Threeish */
 
 @import "settings/_var.scss";
+@import "settings/_type-mod.scss";
 
 @import "tools/_rem.scss";
 @import "tools/_mixins.scss";
 @import "tools/_animations.scss";
 @import "tools/_helper.scss";
-@import "tools/_type-mod.scss";
 @import "tools/_grids.scss";
 
 @import "base/_global.scss";
