--- a/app/styles/tools/_mixins.scss
+++ b/app/styles/tools/_mixins.scss
@@ -1,25 +1,93 @@
 @import "../settings/_var.scss";
 
 /* ------------------------------------------------------------------------------------
-	Source:  http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
+  Source:  https://hugogiraudel.com/2014/01/15/sass-string-to-number/
 --------------------------------------------------------------------------------------*/
-@mixin vertical-align($position: relative) {
-	position: $position;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
+////
+/// String to number converter
+/// @author Hugo Giraudel
+/// @access private
+////
+
+
+///
+/// Casts a string into a number
+///
+/// @param {String | Number} $value - Value to be parsed
+///
+/// @return {Number}
+///
+@function to-number($value) {
+  @if type-of($value) == 'number' {
+    @return $value;
+  } @else if type-of($value) != 'string' {
+    $_: log('Value for `to-number` should be a number or a string.');
+  }
+  
+  $result: 0;
+  $digits: 0;
+  $minus: str-slice($value, 1, 1) == '-';
+  $numbers: ('0': 0, '1': 1, '2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9);
+  
+  @for $i from if($minus, 2, 1) through str-length($value) {
+    $character: str-slice($value, $i, $i);
+    
+    @if not (index(map-keys($numbers), $character) or $character == '.') {
+      @return to-length(if($minus, -$result, $result), str-slice($value, $i))
+    }
+    
+    @if $character == '.' {
+      $digits: 1; 
+    } @else if $digits == 0 {
+      $result: $result * 10 + map-get($numbers, $character);  
+    } @else {
+      $digits: $digits * 10;
+      $result: $result + map-get($numbers, $character) / $digits;
+    }
+  }
+  
+  @return if($minus, -$result, $result);;
 }
 
-@mixin inline-block {
-	display: -moz-inline-stack;
-	display: inline-block;
-	*zoom: 1;
-	*display: inline;
+
+///
+/// Add `$unit` to `$value`
+///
+/// @param {Number} $value - Value to add unit to
+/// @param {String} $unit - String representation of the unit
+///
+/// @return {Number} - `$value` expressed in `$unit`
+///
+@function to-length($value, $unit) {
+  $units: ('px': 1px, 'cm': 1cm, 'mm': 1mm, '%': 1%, 'ch': 1ch, 'pc': 1pc, 'in': 1in, 'em': 1em, 'rem': 1rem, 'pt': 1pt, 'ex': 1ex, 'vw': 1vw, 'vh': 1vh, 'vmin': 1vmin, 'vmax': 1vmax);
+  
+  @if not index(map-keys($units), $unit) {
+    $_: log('Invalid unit `#{$unit}`.');
+  }
+  
+  @return $value * map-get($units, $unit);
 }
 
 /* ------------------------------------------------------------------------------------
-	Source:  http://zerosixthree.se/8-sass-mixins-you-must-have-in-your-toolbox/
+  Source:  http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
+--------------------------------------------------------------------------------------*/
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+@mixin inline-block {
+  display: -moz-inline-stack;
+  display: inline-block;
+  *zoom: 1;
+  *display: inline;
+}
+
+/* ------------------------------------------------------------------------------------
+  Source:  http://zerosixthree.se/8-sass-mixins-you-must-have-in-your-toolbox/
 --------------------------------------------------------------------------------------*/
 
 
@@ -27,6 +95,19 @@
 @mixin respond-to($breakpoint) { 
   @if map-has-key($breakpoints, $breakpoint) {
     @media (min-width: #{map-get($breakpoints, $breakpoint)}px) {
+      @content;
+    }
+  } 
+  @else {
+    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+        + "Please make sure it is defined in `$breakpoints` map.";
+  }
+}
+@mixin respond-to-max($breakpoint) { 
+  @if map-has-key($breakpoints, $breakpoint) {
+    $bp: to-number(#{map-get($breakpoints, $breakpoint)});
+    $bpmax: $bp - 1px;
+    @media screen and (max-width: $bpmax) {
       @content;
     }
   } 
