--- a/app/styles/tools/_grids.scss
+++ b/app/styles/tools/_grids.scss
@@ -14,6 +14,11 @@
 
 @each $size, $setting in $susy-settings{
 	@include susy-at($setting) {
+		.containerFluid{
+			width: 100%;
+			padding-left: 2 * gutter();
+			padding-right: 2 * gutter();
+		}
 		.row{				
 			margin-left: -1 * gutter()/2;
 			margin-right: -1 * gutter()/2;
@@ -136,6 +141,10 @@
 
 .container{	
 	@include container();
+	@include respond-to-max(s){
+		padding-left: 12px;
+		padding-right: 12px;
+	}
 	.row{
 		@if $grid-type == 'float'{
 			@extend %clearfix;
